Release 1.3.0
Features:

- Generated adder and remover methods for maps now support the call of change methods

Enhancements:

- Improved implementation of generated clear methods for collections (retrieving elements inside synchronization lock)